2008-08-21 [colin]	3.5.0cvs66

	* src/compose.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_wrapping.c
		Add a preference for autoindent; fix no_join tag
		being applied to whole lines instead of just \n when
		creating a line 

2008-08-21 [colin]	3.5.0cvs65

	* src/compose.c
		Add support for auto-indentation

2008-08-19 [colin]	3.5.0cvs64

	* src/compose.c
		Save Autowrap status in drafts/queued mails

2008-08-19 [colin]	3.5.0cvs63

	* src/mainwindow.c
		Fix a comment (in reality, test commit on
		the new CVS server)

2008-08-17 [colin]	3.5.0cvs62

	* src/prefs_actions.c
	* src/procmime.c
	* src/wizard.c
	* src/common/socket.h
	* src/gtk/gtkcmctree.c
		Fix warnings

2008-08-16 [colin]	3.5.0cvs61

	* src/editaddress_other_attributes_ldap.h
		Add 'l' field (localityName)

2008-08-16 [colin]	3.5.0cvs60

	* src/mainwindow.c
	* src/gtk/gtkcmclist.c
	* src/gtk/gtkcmclist.h
	* src/gtk/gtkcmctree.c
	* src/gtk/gtksctree.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkvscrollbutton.c
		Fix Maemo build (OS2007)

2008-08-14 [colin]	3.5.0cvs59

	* src/folder.c
		Don't crash if parent is null when creating
		a folder
	* src/gtk/pluginwindow.c
		Don't crash on race when closing window while
		a plugin is loading and does gtk_iterations

2008-08-13 [colin]	3.5.0cvs58

	* src/messageview.c
	* src/messageview.h
	* src/mimeview.c
		Fix bug 1696, 'Viewing binary attachements 
		as text over 1 MB' (various buglets)

2008-08-10 [colin]	3.5.0cvs57

	* src/summaryview.c
	* src/gtk/gtkcmclist.c
		Continue fixing GTK < 2.12 build, thanks to
		Michael Hugues

2008-08-10 [colin]	3.5.0cvs56

	* src/gtk/gtksctree.c
		Fix build on GTK < 2.12

2008-08-09 [colin]	3.5.0cvs55

	* src/mainwindow.c
		Fix untranslatable strings, thanks to
		Stephan Sachse

2008-08-07 [colin]	3.5.0cvs54

	* src/compose.c
	* src/editaddress.c
	* src/folderview.c
	* src/mainwindow.c
	* src/message_search.c
	* src/mimeview.c
	* src/noticeview.c
	* src/prefs_account.c
	* src/prefs_common.c
	* src/prefs_customheader.c